src/test/ui/nll/unused-mut-issue-50343.stderr
error: variable does not need to be mutable
  --> $DIR/unused-mut-issue-50343.rs:4:33
   |
LL |     vec![(42, 22)].iter().map(|(mut x, _y)| ()).count();
   |                                 ----^
   |                                 |
   |                                 help: remove this `mut`
   |
note: lint level defined here
  --> $DIR/unused-mut-issue-50343.rs:1:9
   |
LL | #![deny(unused_mut)]
   |         ^^^^^^^^^^

error: aborting due to previous error

